firefox bug with backface visibility

--- a/1_html/style.css
+++ b/1_html/style.css
@@ -144,6 +144,10 @@
         margin-right: 8px;
     }
 
+    .front, .back {
+        transform: rotateX(0deg)
+    }
+
     .icon {
         visibility: hidden;
         margin-left: 5px;
